removed the dependency for jQuery UI and fixed the dependencies such that dragging works on mobile

--- a/stylesheets/jquery.gridly.sass
+++ b/stylesheets/jquery.gridly.sass
@@ -6,5 +6,7 @@ $white: #FFF
 $namespace: "gridly"
 
 .gridly
-  &, > :not(.ui-draggable-dragging)
+  &, > :not(.dragging)
     +transition(all 0.4s ease-in-out)
+  .dragging
+    z-index: 800
